--- a/tfjs-converter/package.json
+++ b/tfjs-converter/package.json
@@ -75,6 +75,7 @@
     "publish-npm": "npm publish",
     "test": "yarn && yarn build-deps && yarn gen-json --test && yarn gen-kernel2ops && ts-node -P tsconfig.test.json run_tests.ts",
     "test-ci": "ts-node --skip-ignore -P tsconfig.test.json run_tests.ts",
+    "test-dev": "ts-node -P tsconfig.test.json run_tests.ts",
     "test-snippets": "ts-node --skip-ignore -s ./scripts/test_snippets.ts",
     "lint": "tslint -p . -t verbose",
     "make-version": "sh -c ./scripts/make-version",
